bitbybit/tests/no_compile/invalid_bit_pos/invalid_bits_pos_array_u64.rs
use bitbybit::bitfield;

#[bitfield(u64, default = 0)]
struct Test {
    #[bits([0, 63..=64], rw)]
    multi_bit_field: u3,
}

fn main() {}
